# Project-

./: populate_consumption_data.py  populate_inventory.py  populate_new_categories.py  pyproject.toml  regression_lstm_page.py  replit.md  smart_recommendations.py
